--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,8 @@
 @import 'footer.css';
 
 :root {
-  --link-color: #fc9;
-  --link-color-hover: rgb(255, 214, 174);
+  --link-color: #155b98;
+  --link-color-hover: #1c79ca;
   --mono: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
   --gap: 20px;
   --canvas-width: 1024px;
@@ -13,17 +13,15 @@
 }
 
 body {
-  font-family: var(--mono);
-  color: #fff; background: #000; margin: 0;
-}
-
-h1, h2, h3, h4, h5 {
-  font-weight: normal;
+  font-family: system-ui, sans-serif;
+  color: #333;
+  background: #fff;
+  margin: 0;
 }
 
 h1 {
   font-size: 40px;
-  margin: 0;
+  margin: 4rem 0 0;
 }
 
 h2 {
@@ -55,6 +53,8 @@ main {
   max-width: calc(var(--canvas-width) + calc(var(--gap) * 2));
   padding: var(--gap);
   margin: 20px auto 0;
+  min-height: 100vh;
+  background: #fff;
 
   & canvas {
     display: block;
@@ -71,4 +71,25 @@ main {
   margin: -1px;
   overflow: hidden;
   clip: rect(0px, 0px, 0px, 0px);
+}
+
+.error-box > div {
+  border: 1px solid #c00;
+  background: #fdd;
+  padding: 0 var(--gap);
+  border-radius: 4px;
+  margin: calc(var(--gap) * 2) 0;
+
+  & > h3 {
+    font-size: 20px;
+    color: #c00;
+
+    &:first-of-type {
+      margin-top: var(--gap);
+    }
+  }
+
+  &:not(.visible) {
+    display: none;
+  }
 }
