--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -60,6 +60,7 @@ main {
     display: block;
     max-width: 100%;
     margin: var(--gap) 0 0;
+    background: rgb(0, 0, 38.25);
   }
 }
 
@@ -114,6 +115,6 @@ main {
   }
 
   &:has(> :empty) {
-    opacity: 0;
+    display: none;
   }
 }
