--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,7 +21,7 @@ body {
 
 h1 {
   font-size: 40px;
-  margin: 4rem 0 0;
+  margin: 0;
 }
 
 h2 {
@@ -51,9 +51,8 @@ a:hover {
 
 main {
   max-width: calc(var(--canvas-width) + calc(var(--gap) * 2));
-  padding: var(--gap);
-  margin: 20px auto 0;
-  min-height: 100vh;
+  padding: calc(var(--gap) * 4) var(--gap) calc(var(--gap) * 8);
+  margin: 0 auto;
   background: #fff;
 
   & canvas {
@@ -61,6 +60,7 @@ main {
     max-width: 100%;
     margin: var(--gap) 0 0;
     background: rgb(0, 0, 38.25);
+    border-radius: 2%;
   }
 }
 
