--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -36,8 +36,12 @@ h3 {
   margin-bottom: 8px;
 }
 
-p {
+p, ul, li {
   line-height: 1.6;
+}
+
+ul {
+  margin: 0;
 }
 
 a,
@@ -64,6 +68,10 @@ main {
   }
 }
 
+.error-box:has(> .visible) ~ canvas {
+  display: none;
+}
+
 .hidden {
   position: absolute;
   display: inline-block;
@@ -82,15 +90,18 @@ main {
 }
 
 .error-box > div {
-  border: 1px solid #c00;
-  background: #fdd;
-  padding: 0 var(--gap);
-  border-radius: 4px;
-  margin: calc(var(--gap) * 2) 0;
+  border: 1px solid #d6d6d6;
+  background: #f7f7f7;
+  padding: max(var(--gap), 8%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 2%;
+  margin: var(--gap) 0 0;
+  aspect-ratio: 1 / 1;
 
   & > h3 {
     font-size: 20px;
-    color: #c00;
 
     &:first-of-type {
       margin-top: var(--gap);
@@ -99,6 +110,14 @@ main {
 
   &:not(.visible) {
     display: none;
+  }
+
+  & .flag {
+    font-size: 0.9rem;
+    font-family: var(--mono);
+    background: #e8e8e8;
+    padding: 2px 4px;
+    border-radius: 4px;
   }
 }
 
